fixed dom-console collapsing further, made it show a bit more than it did before when collapsed

--- a/src/art/dev_tools/dom_console/style.css
+++ b/src/art/dev_tools/dom_console/style.css
@@ -29,6 +29,10 @@
     .domConsole .collapsable:hover {
       border-left: 1px solid #cccc44;
       border-radius: 5px; }
+  .domConsole .collapsable.closed {
+    overflow: hidden;
+    height: 16px;
+  }
   .domConsole .collapsable.closed.array:before {
     content: "▹"; }
   .domConsole .collapsable.open.array:before {
